<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="search">Поиск</string>
    <string name="search_test_input">Текст поискового запроса для теста</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="night_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="mail_to_support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>

    <string name="search_editText_hint_text">Поиск</string>

    <string name="android_developer_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <string name="startActivity_shareAppDisplayIntent_catch_message">Что то пошло не так, обратесь в службу поддержки</string>
    <string name="startActivity_sendEmailToSupportIntent_catch_message">Отсуствует приложение для отправки электронной почты, установите приложение, попробуйте заново</string>
    <string name="startActivity_usersAgreementIntent_catch_message">Отсуствует приложение для просмотра Веб-страниц, установите приложение, попробуйте заново</string>

    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="test_mail_address">kondratyev_dv@mail.ru</string>


    <string name="test_trackName_1">Smells Like Teen Spirit</string>
    <string name="test_artistName_1">Nirvana</string>
    <string name="test_trackTime_1">5:01</string>
    <string name="test_artworkUrl100_1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="test_trackName_2">Billie Jean</string>
    <string name="test_artistName_2">Michael Jackson</string>
    <string name="test_trackTime_2">4:35</string>
    <string name="test_artworkUrl100_2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="test_trackName_3">Stayin\' Alive</string>
    <string name="test_artistName_3">Bee Gees</string>
    <string name="test_trackTime_3">4:10</string>
    <string name="test_artworkUrl100_3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="test_trackName_4">Whole Lotta Love</string>
    <string name="test_artistName_4">Led Zeppelin</string>
    <string name="test_trackTime_4">5:33</string>
    <string name="test_artworkUrl100_4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="test_trackName_5">Sweet Child O\'Mine</string>
    <string name="test_artistName_5">Guns N\' Roses</string>
    <string name="test_trackTime_5">5:03</string>
    <string name="test_artworkUrl100_5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>

    <string name="track_name_tools">Название трека Название трека Название трека Название трека Название трека Название трека Название трека</string>
    <string name="track_artist_tools">Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель Исполнитель</string>
    <string name="track_time_tools">0:00</string>

    <string name="iTunes_api_url">https://itunes.apple.com/</string>
    <string name="iTunes_GET_request">/search?entity=song</string>
    <string name="iTunes_query_param">term</string>

    <string name="searchNothing">Ничего не нашлось</string>
    <string name="noInternet">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="genreTitle">Жанр</string>
    <string name="countryTitle">Страна</string>
    <string name="yearTitle">Год</string>
    <string name="albumTitle">Альбом</string>
    <string name="durationTitle">Длительность</string>


</resources>