<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   style="@style/body_main_activity"
    >
    <TextView
        android:id="@+id/header_main_activity"
        style="@style/header_main_activity"

        />
    <Button
        android:id="@+id/search_button"
        android:text="@string/search"
        app:icon="@drawable/search_icon"
        style="@style/button_main_activity" />
    <Button
        android:id="@+id/media_button"
        android:text="@string/media"
        app:icon="@drawable/media_icon"
        style="@style/button_main_activity" />
    <Button
        android:id="@+id/settings_button"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        style="@style/button_main_activity" />

</LinearLayout>

