<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artwork"
        style="@style/artwork"/>

    <LinearLayout
        android:id="@+id/track_name_artist_time"
        style="@style/track_name_artist_time">

        <TextView
            android:id="@+id/track_name"
            tools:text="@string/track_name_tools"
            style="@style/track_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/artist_name"
                tools:text="@string/track_artist_tools"
                style="@style/artist_name"/>
            <ImageView
                android:id="@+id/separator"
                style="@style/separator" />
            <TextView
                android:id="@+id/track_time"
                tools:text="@string/track_time_tools"
                style="@style/track_time"/>
        </LinearLayout>

    </LinearLayout>

        <ImageView
        android:id="@+id/tack_arrow"
        style="@style/tack_arrow" />

</LinearLayout>