<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activitySearch"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/activity_search_header"
        style="@style/activity_settings_header"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:text="@string/search" />


    <LinearLayout style="@style/activity_search_linearLayout_search">

        <ImageView style="@style/activity_search_imageView_searchIcon" />

        <FrameLayout
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_editeText"
                style="@style/activity_search_EditText_search"
                android:elegantTextHeight="true"
                android:textCursorDrawable="@drawable/color_cursor"
                tools:text="@string/search_test_input" />

            <ImageButton
                android:id="@+id/clearSearchEditTextViewButton"
                android:visibility="gone"
                style="@style/activity_search_imageView_cancelIcon" />
        </FrameLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="508dp"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/plm_blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/placeHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="210dp"
        android:visibility="gone"
        android:layout_gravity="center">

        <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="23dp"
            android:layout_gravity="start"
            style="@style/placeBackNote"/>
        <ImageView
            android:id="@+id/placeHolderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="23dp"
            android:src="@drawable/sadsmile"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="end"
            style="@style/placeHolderFrontNote"/>
    </FrameLayout>

        <TextView
            android:id="@+id/placeHolderText"
            style="@style/textHeader"
            android:layout_gravity="center"
            android:text="@string/noInternet" />

        <Button
            android:id="@+id/refreshButton"
            style="@style/roundedCornerButton"
            android:text="Обновить"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/searchHistoryTitle"
        android:layout_gravity="center"
        android:text="Вы искали"
        style="@style/textHeader"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/track_card"
        tools:itemCount="30"/>

    <Button
        android:id="@+id/clearHistoryButton"
        style="@style/roundedCornerButton"
        android:text="Очистить историю"
        android:visibility="gone"

        />

    </LinearLayout>



</LinearLayout>